--- a/index.html
+++ b/index.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
-<html lang>
+<html lang="en-US" class="dew-solar dew-wet dew-tab dew-hyper dew-shift dew-diy" id="mix">
+
 <meta charset="utf-8">
-<title>...</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="seashell">
-<meta name="description" content="...">
-<link rel="stylesheet" href="wall.css">
-<link rel="help" href="https://github.com/webmural/wall">
+
+<title>I CREATE&copy; web sample with I above EA</title>
+
+<meta name="theme-color" content="#404">
+<meta name="color-scheme" content="dark light">
+
+<style media=(color) data-help="https://s9a.page/dew">
+.dew-shift,.dew-shift *{transition:var(--dew-shift)}.dew-wet,.dew-wet *{background:var(--dew-oil);color:var(--dew-ink)}.dew-rim,.dew-rim *{border-color:var(--dew-rim)}.dew-hyper,.dew-hyper :any-link{filter:var(--dew-hyper)}.dew-tab :focus,.dew-tab:focus{filter:var(--dew-focus);outline-color:var(--dew-locus)}.dew-field:disabled{filter:var(--dew-vapor)}.dew-lunar.dew-lunar,.dew-media.dew-media,.dew-polar.dew-polar,.dew-solar.dew-solar{fill:var(--dew-oil);background:var(--dew-oil);color:var(--dew-ink)}:root{--dew-hyper:none;--dew-media:var(--dew-solar);--dew-polar:var(--dew-lunar);--dew-oil:var(--dew-media);--dew-ink:var(--dew-polar);--dew-rim:var(--dew-ink);--dew-shift:none;--dew-solar:mistyrose;--dew-lunar:darkviolet;--dew-locus:currentColor;--dew-focus:invert(100%);--dew-hover:none;--dew-vapor:opacity(60%)}:any-link:hover{--dew-hyper:var(--dew-hover)}:any-link:focus{--dew-hyper:var(--dew-focus)}.dew-lunar,.dew-polar{--dew-oil:var(--dew-polar);--dew-ink:var(--dew-media)}@media (prefers-color-scheme:dark){:root{--dew-media:var(--dew-lunar);--dew-polar:var(--dew-solar)}}
+</style>
+
+<link rel="stylesheet" href="sauce.css">
 <link rel="icon" href="icon.svg">
+<link rel="index" href="https://webmural.com">
+<link rel="preconnect" href="https://overstandme.netlify.app">
+<link rel="help" href="https://ryanve.com">
+
+<h1 class="oral">
+  <q cite="https://instagram.com/overstandme">I CREATE.</q>
+</h1>
+
+<figure id="show" class="aurora" aria-label="silkscreen">
+  <blockquote class="tee splatter" cite="https://instagram.com/overstandme">
+    <a href="https://overstandme.netlify.app" class="eye">i</a>
+    <b><a href="#mix">create</a><a class="period" href="#shop">.</a></b>
+  </blockquote>
+</figure>
+
+<figure id="shop" class="aura dew-media" aria-label="shop">
+  <address class="blurb">
+    <q>I<wbr>CREATE.</q> is created by Atlanta creator
+    <a class="dew-polar" href="https://overstandme.netlify.app">J.LEUNAMMé&reg;</a>
+    who creates this apparel line for his North Lake Mall Atanta and Stockbridge shops.
+    <a class="dew-polar" href="#show">Show up.</a> Shop in person or instagram
+    <a class="dew-polar" href="https://instagram.com/overstandme">@overstandme</a>
+  </address>
+</figure>
+
+<footer id="code" class="aura" aria-label="code">
+  <a href="https://github.com/webmural/i">code</a>
+  <a href="https://s9a.page/dew">color</a>
+  <a href="https://thirdpower.xyz">collab</a>
+</footer>
