--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <address class="blurb">
     <q>I<wbr>CREATE.</q> is created by Atlanta creator
     <a class="dew-polar" href="https://overstandme.netlify.app">J.LEUNAMMé&reg;</a>
-    who creates this apparel line for his North Lake Mall Atanta and Stockbridge shops.
+    who creates this apparel line for his North Lake Mall Atlanta and Stockbridge shops.
     <a class="dew-polar" href="#show">Show up.</a> Shop in person or instagram
     <a class="dew-polar" href="https://instagram.com/overstandme">@overstandme</a>
   </address>
