--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <figure id="shop" class="aura dew-media" aria-label="shop">
   <address class="blurb">
-    <q>I<wbr>CREATE.</q> is created by Atlanta creator
+    <q>I<wbr>CREATE</q> is created by Atlanta creator
     <a class="dew-polar" href="https://overstandme.netlify.app">J.LEUNAMMé&reg;</a>
     who creates this apparel line for his North Lake Mall Atlanta and Stockbridge shops.
     <a class="dew-polar" href="#show">Show up.</a> Shop in person or instagram
