--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <link rel="help" href="https://ryanve.com">
 
 <h1 class="oral">
-  <q cite="https://instagram.com/overstandme">I CREATE.</q>
+  <q cite="https://instagram.com/overstandme">I CREATE</q>
 </h1>
 
 <figure id="show" class="aurora" aria-label="silkscreen">
@@ -32,7 +32,7 @@
 
 <figure id="shop" class="aura dew-media" aria-label="shop">
   <address class="blurb">
-    <q>I<wbr>CREATE</q> is created by Atlanta creator
+    <cite>I<wbr>CREATE<sub>&copy;</sub></cite> is created by Atlanta creator
     <a class="dew-polar" href="https://overstandme.netlify.app">J.LEUNAMMé&reg;</a>
     who creates this apparel line for his North Lake Mall Atlanta and Stockbridge shops.
     <a class="dew-polar" href="#show">Show up.</a> Shop in person or instagram
