--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <meta name="theme-color" content="#404">
 <meta name="color-scheme" content="dark light">
+<meta name="description" content="HteeML web mural">
 
 <style media=(color) data-help="https://s9a.page/dew">
 .dew-shift,.dew-shift *{transition:var(--dew-shift)}.dew-wet,.dew-wet *{background:var(--dew-oil);color:var(--dew-ink)}.dew-rim,.dew-rim *{border-color:var(--dew-rim)}.dew-hyper,.dew-hyper :any-link{filter:var(--dew-hyper)}.dew-tab :focus,.dew-tab:focus{filter:var(--dew-focus);outline-color:var(--dew-locus)}.dew-field:disabled{filter:var(--dew-vapor)}.dew-lunar.dew-lunar,.dew-media.dew-media,.dew-polar.dew-polar,.dew-solar.dew-solar{fill:var(--dew-oil);background:var(--dew-oil);color:var(--dew-ink)}:root{--dew-hyper:none;--dew-media:var(--dew-solar);--dew-polar:var(--dew-lunar);--dew-oil:var(--dew-media);--dew-ink:var(--dew-polar);--dew-rim:var(--dew-ink);--dew-shift:none;--dew-solar:mistyrose;--dew-lunar:darkviolet;--dew-locus:currentColor;--dew-focus:invert(100%);--dew-hover:none;--dew-vapor:opacity(60%)}:any-link:hover{--dew-hyper:var(--dew-hover)}:any-link:focus{--dew-hyper:var(--dew-focus)}.dew-lunar,.dew-polar{--dew-oil:var(--dew-polar);--dew-ink:var(--dew-media)}@media (prefers-color-scheme:dark){:root{--dew-media:var(--dew-lunar);--dew-polar:var(--dew-solar)}}
@@ -30,18 +31,18 @@
   </blockquote>
 </figure>
 
-<figure id="shop" class="aura dew-media" aria-label="shop">
+<figure id="shop" class="aura" aria-label="shop">
   <address class="blurb">
     <cite>I<wbr>CREATE<sub>&copy;</sub></cite> is created by Atlanta creator
-    <a class="dew-polar" href="https://overstandme.netlify.app">J.LEUNAMMé&reg;</a>
+    <a class="dew-lunar" href="https://overstandme.netlify.app">J.LEUNAMMé&reg;</a>
     who creates this apparel line for his North Lake Mall Atlanta and Stockbridge shops.
-    <a class="dew-polar" href="#show">Show up.</a> Shop in person or instagram
-    <a class="dew-polar" href="https://instagram.com/overstandme">@overstandme</a>
+    <a class="dew-lunar" href="#show">Show up.</a> Shop in person or instagram
+    <a class="dew-lunar" href="https://instagram.com/overstandme">@overstandme</a>
   </address>
 </figure>
 
-<footer id="code" class="aura" aria-label="code">
-  <a href="https://github.com/webmural/i">code</a>
-  <a href="https://s9a.page/dew">color</a>
-  <a href="https://thirdpower.xyz">collab</a>
-</footer>
+<menu id="code" class="aura" aria-label="code">
+  <li class="spice"><a href="https://github.com/webmural/i">code</a>
+  <li class="spice"><a href="https://s9a.page/dew">color</a>
+  <li class="spice"><a href="https://thirdpower.xyz">collab</a>
+</menu>
