--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 <link rel="stylesheet" href="sauce.css">
 <link rel="icon" href="icon.svg">
 <link rel="index" href="https://webmural.com">
-<link rel="preconnect" href="https://overstandme.netlify.app">
 <link rel="help" href="https://ryanve.com">
 
 <h1 class="oral">
@@ -26,7 +25,7 @@
 
 <figure id="show" class="aurora" aria-label="silkscreen">
   <blockquote class="tee splatter" cite="https://instagram.com/overstandme">
-    <a href="https://overstandme.netlify.app" class="eye">i</a>
+    <a href="https://www.instagram.com/overstandme" class="eye">i</a>
     <b><a href="#mix">create</a><a class="period" href="#shop">.</a></b>
   </blockquote>
 </figure>
@@ -34,7 +33,7 @@
 <figure id="shop" class="aura" aria-label="shop">
   <address class="blurb">
     <cite>I<wbr>CREATE<sub>&copy;</sub></cite> is created by Atlanta creator
-    <a class="dew-lunar" href="https://overstandme.netlify.app">J.LEUNAMMé&reg;</a>
+    <a class="dew-lunar" href="https://www.instagram.com/overstandme">J.LEUNAMMé&reg;</a>
     who creates this apparel line for his North Lake Mall Atlanta and Stockbridge shops.
     <a class="dew-lunar" href="#show">Show up.</a> Shop in person or instagram
     <a class="dew-lunar" href="https://instagram.com/overstandme">@overstandme</a>
