--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 <link rel="help" href="https://ryanve.com">
 
 <h1 class="oral">
-  <q cite="https://instagram.com/overstandme">I CREATE</q>
+  <q cite="https://www.instagram.com/j_leunamme">I CREATE</q>
 </h1>
 
 <figure id="show" class="aurora" aria-label="silkscreen">
-  <blockquote class="tee splatter" cite="https://instagram.com/overstandme">
-    <a href="https://www.instagram.com/overstandme" class="eye">i</a>
+  <blockquote class="tee splatter" cite="https://www.instagram.com/j_leunamme">
+    <a href="https://www.instagram.com/j_leunamme" class="eye">i</a>
     <b><a href="#mix">create</a><a class="period" href="#shop">.</a></b>
   </blockquote>
 </figure>
@@ -33,10 +33,10 @@
 <figure id="shop" class="aura" aria-label="shop">
   <address class="blurb">
     <cite>I<wbr>CREATE<sub>&copy;</sub></cite> is created by Atlanta creator
-    <a class="dew-lunar" href="https://www.instagram.com/overstandme">J.LEUNAMMé&reg;</a>
+    <a class="dew-lunar" href="https://www.instagram.com/j_leunamme">J.LEUNAMMé&reg;</a>
     who creates this apparel line for his North Lake Mall Atlanta and Stockbridge shops.
     <a class="dew-lunar" href="#show">Show up.</a> Shop in person or instagram
-    <a class="dew-lunar" href="https://instagram.com/overstandme">@overstandme</a>
+    <a class="dew-lunar" href="https://www.instagram.com/j_leunamme">@oj_leunamme</a>
   </address>
 </figure>
 
