change ig handle

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <a class="dew-lunar" href="https://www.instagram.com/j_leunamme">J.LEUNAMMé&reg;</a>
     who creates this apparel line for his North Lake Mall Atlanta and Stockbridge shops.
     <a class="dew-lunar" href="#show">Show up.</a> Shop in person or instagram
-    <a class="dew-lunar" href="https://www.instagram.com/j_leunamme">@oj_leunamme</a>
+    <a class="dew-lunar" href="https://www.instagram.com/j_leunamme">@j_leunamme</a>
   </address>
 </figure>
 
